WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300833
Enabling shared process for site isolation breaks Speedometer
https://bugs.webkit.org/show_bug.cgi?id=300833
Summary
Enabling shared process for site isolation breaks Speedometer
Ryosuke Niwa
Reported
2025-10-15 14:46:01 PDT
Speedometer doesn't run until completion. <
rdar://162717992
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-10-15 14:49:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52420
EWS
Comment 2
2025-10-15 20:45:26 PDT
Committed
301601@main
(7a4a685cd1e9): <
https://commits.webkit.org/301601@main
> Reviewed commits have been landed. Closing PR #52420 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-10-15 20:46:13 PDT
<
rdar://problem/162743159
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug