Enabling shared process for site isolation breaks Speedometer https://bugs.webkit.org/show_bug.cgi?id=300833

Reviewed by Ben Nham.

Fixed the bug in BrowsingContextGroup::sharedProcessForSite that every website will get put
into the shared process unless it's explicitly listed as having had user interaction.

Test: TestWebKitAPI.SiteIsolation.SharedProcessSameOrigin
      TestWebKitAPI.SiteIsolation.SharedProcessLoadIsolatedSiteInSubframeOfNewWindow

* Source/WebKit/UIProcess/BrowsingContextGroup.cpp:
(WebKit::BrowsingContextGroup::sharedProcessForSite):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::(SiteIsolation, SharedProcessSameOrigin)):
(TestWebKitAPI::(SiteIsolation, SharedProcessLoadIsolatedSiteInSubframeOfNewWindow)):
(TestWebKitAPI::(SiteIsolation, SharedProcessAfterUserInteractionInSharedProcesss)):

Canonical link: https://commits.webkit.org/301601@main